[gd_scene load_steps=23 format=3 uid="uid://do2efou0utuwh"]

[ext_resource type="Script" path="res://stage_select_class_1.gd" id="1_2iimn"]
[ext_resource type="Texture2D" uid="uid://csyits3vt1s8k" path="res://assets/images/backgrounds/teenager-hideout-spot.png" id="2_gmvnh"]
[ext_resource type="AudioStream" uid="uid://cwhiwjmpdpau3" path="res://assets/sounds/button-124476.mp3" id="3_m2gey"]
[ext_resource type="FontFile" uid="uid://buamlm1honkuj" path="res://assets/fonts/ACMESecretAgentBB_BoldItal.ttf" id="4_iogy3"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_am7qm"]
load_path = "res://.godot/imported/buttons.png-75fb77b99909d3d0b6f3beb8b32d56a7.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v04ia"]
texture = SubResource("CompressedTexture2D_am7qm")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kh4io"]
load_path = "res://.godot/imported/buttons.png-75fb77b99909d3d0b6f3beb8b32d56a7.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wiyc5"]
texture = SubResource("CompressedTexture2D_kh4io")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cumad"]
texture = SubResource("CompressedTexture2D_kh4io")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="Theme" id="Theme_q1d1h"]
Button/styles/hover = SubResource("StyleBoxTexture_v04ia")
Button/styles/normal = SubResource("StyleBoxTexture_wiyc5")
Button/styles/pressed = SubResource("StyleBoxTexture_cumad")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tcop8"]
texture = SubResource("CompressedTexture2D_kh4io")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t3k0e"]
texture = SubResource("CompressedTexture2D_kh4io")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yijf2"]
texture = SubResource("CompressedTexture2D_kh4io")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="Theme" id="Theme_1unmy"]
Button/styles/hover = SubResource("StyleBoxTexture_tcop8")
Button/styles/normal = SubResource("StyleBoxTexture_t3k0e")
Button/styles/pressed = SubResource("StyleBoxTexture_yijf2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rwkq1"]
texture = SubResource("CompressedTexture2D_kh4io")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rngm4"]
texture = SubResource("CompressedTexture2D_kh4io")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uxsfm"]
texture = SubResource("CompressedTexture2D_kh4io")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="Theme" id="Theme_t8m2l"]
Button/styles/hover = SubResource("StyleBoxTexture_rwkq1")
Button/styles/normal = SubResource("StyleBoxTexture_rngm4")
Button/styles/pressed = SubResource("StyleBoxTexture_uxsfm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bctq0"]
texture = SubResource("CompressedTexture2D_kh4io")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="Theme" id="Theme_bctou"]
default_font = ExtResource("4_iogy3")
default_font_size = 40
Label/styles/normal = SubResource("StyleBoxTexture_bctq0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_natx2"]
texture = SubResource("CompressedTexture2D_kh4io")
region_rect = Rect2(433, 49, 314, 111)

[sub_resource type="Theme" id="Theme_srd3v"]
Button/styles/focus = SubResource("StyleBoxTexture_natx2")
Button/styles/hover = SubResource("StyleBoxTexture_natx2")
Button/styles/normal = SubResource("StyleBoxTexture_natx2")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_2iimn")

[node name="Teenager-hideout-spot" type="Sprite2D" parent="."]
position = Vector2(574.25, 325.25)
scale = Vector2(0.688401, 0.670313)
texture = ExtResource("2_gmvnh")

[node name="Stage 1-1" type="Button" parent="."]
offset_left = 40.0
offset_top = 234.0
offset_right = 121.0
offset_bottom = 299.0
theme = SubResource("Theme_q1d1h")
text = "1-1"

[node name="Stage 1-2" type="Button" parent="."]
offset_left = 144.0
offset_top = 232.0
offset_right = 235.0
offset_bottom = 300.0
theme = SubResource("Theme_1unmy")
text = "1-2"

[node name="Stage 1-3" type="Button" parent="."]
offset_left = 259.0
offset_top = 231.0
offset_right = 340.0
offset_bottom = 295.0
theme = SubResource("Theme_t8m2l")
text = "1-3"

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_m2gey")

[node name="Label" type="Label" parent="."]
offset_left = 418.671
offset_top = 28.9716
offset_right = 753.671
offset_bottom = 189.972
theme = SubResource("Theme_bctou")
text = "Pilih Stage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Returnpilihkelas" type="Button" parent="."]
offset_left = 964.0
offset_top = 526.0
offset_right = 1120.0
offset_bottom = 612.0
theme = SubResource("Theme_srd3v")
theme_override_fonts/font = ExtResource("4_iogy3")
theme_override_font_sizes/font_size = 30
text = "Return"

[connection signal="mouse_entered" from="Stage 1-1" to="." method="_on_stage_11_mouse_entered"]
[connection signal="pressed" from="Stage 1-1" to="." method="_on_stage_11_pressed"]
[connection signal="pressed" from="Stage 1-1" to="." method="_on_stage_1_pressed"]
[connection signal="pressed" from="Stage 1-1" to="Stage 1-1" method="_on_pressed"]
[connection signal="mouse_entered" from="Stage 1-2" to="." method="_on_stage_12_mouse_entered"]
[connection signal="pressed" from="Stage 1-2" to="." method="_on_stage_12_pressed"]
[connection signal="mouse_entered" from="Stage 1-3" to="." method="_on_stage_13_mouse_entered"]
[connection signal="pressed" from="Stage 1-3" to="." method="_on_stage_13_pressed"]
[connection signal="pressed" from="Returnpilihkelas" to="." method="_on_returnpilihkelas_pressed"]
